navbar 기초 구현(로고, 우측 정렬 버튼 2개)

--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,12 @@
             <div class="new">
                 <a href="#">
                     <button type="button" class="btn btn-info navbar-btn">로그인</button>
-
                 </a>
-
+            </div>
+            <div class="new">
+                <a href="#">
+                    <button type="button" class="btn btn-danger">후원하기</button>
+                </a>
             </div>
         </div>
 
