CSS 미디어쿼리 사용법 기초(min-width)

--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,13 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
+                <a class="navbar-brand">
                 <div class="logo-wrap">
                     <img class="logo" alt="logo" src="../static/exercise1.png">
                     <h1>프론트엔드 빡세게 공부하는 곳</h1>
 
                 </div>
+                </a>
 
             </div>
             <div class="new">
