div 안에서의 div 정렬법 연습, 부트스트랩 glyphicon 사용 연습

--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,45 @@
 
 
     </nav>
+    <div class="container">
+        <div class="box-little">
+
+                    <h3 class="text-center">이것은 패널입니다. 패널이죠.</h3>
+                    패널이라구요? 훼이크입니다 사실 그냥 박스입니다 부트스트랩에서 기본으로 제공한 패널은 아닙니다.
+        </div>
+
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4>요거는 진짜 패널이 맞습니다.</h4>
+                부트스트랩의 panel 클래스로 만든 겁니다. 참 쉽죠?
+            </div>
+
+        </div>
+
+        <div class="panel panel-default" id="colored">
+            <div class="panel-body">
+                <h5>색깔을 입혀봤습니다.</h5>
+                어때요? 예쁘죠?
+            </div>
+
+        </div>
+        <div id="no_align_package">
+            <div class="child alert alert-warning" id="alert">
+                <h5><span class="glyphicon glyphicon-pencil"></span>&nbsp;어라, 요것 좀 보십시오.</h5>
+                이것은 부트스트랩의 alert 콤포넌트를 이용한 것입니다.
+            </div>
+            <div class="child panel panel-default" id="ignore_align">
+                <div class="panel-body">
+                    <h5>얘는 정렬되지 않습니다.</h5>
+                    그냥 중구난방으로 만들어질 겁니다.
+                </div>
+            </div>
+        </div>
+        </div>
+
+
+
 
 </body>
 </html>
